# search_engine

./: CMakeLists.txt  README.md  answers.json  config.json  main.cpp
include/: ConventerJSON.h  ConverterJSON.h  InvertedIndex.h  SearchServer.h
json/: answers.json  config.json  requests.json
resources/: file001.txt  file002.txt  file003.txt  file004.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
src/test/: Gtest.cpp
tests/: CMakeLists.txt  ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchServer_test.cpp
